--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,7 @@ p {
   margin-top: 10vh;
 }
 .box input {
+  display: flex;
   font-family: "Comfortaa", cursive;
   font-size: 15px;
   font-weight: 400;
@@ -52,7 +53,8 @@ p {
   justify-content: center;
   width: 100vw;
 }
-.btn1 button {
+.btnOne {
+  display: flex;
   position: relative;
   left: 13vw;
   bottom: 10vh;
@@ -65,6 +67,8 @@ p {
   color: black;
   background-color: #9abde7;
   cursor: pointer;
+  justify-content: center;
+  align-items: center;
 }
 .first {
   display: flex;
@@ -83,4 +87,35 @@ p {
 .trash {
   width: 2vw;
   height: 3.4vh;
+}
+
+@media only screen and (min-width: 360px) and (max-width: 800px) {
+  .box input {
+    position: absolute;
+    font-family: "Comfortaa", cursive;
+    font-size: 15px;
+    font-weight: 400;
+    border-radius: 10px;
+    width: 50vw;
+    height: 6vh;
+    color: black;
+    background-color: #9abde7;
+  }
+  .btn1 {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 6.5vh;
+  }
+  .btnOne {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-top: 80%;
+    margin-right: 30%;
+    width: 20%;
+    height: 5vh;
+  }
 }
